--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "autoprefixer": "^10.2.1",
-    "next": "latest",
+    "next": "^10.0.5",
     "postcss-cli": "^8.3.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
