--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "autoprefixer": "^10.2.1",
     "next": "^10.0.5",
     "postcss-cli": "^8.3.1",
