--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "autoprefixer": "^10.2.1",
+    "axios": "^0.21.1",
     "next": "^10.0.5",
     "postcss-cli": "^8.3.1",
     "react": "^16.12.0",
